codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_explains_probe_throttle_without_reusing_next_eligible_copy.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ mcodex (v0.0.0)                                                 │
│                                                                     │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date       │
│ information on rate limits and credits                              │
│                                                                     │
│  Model:          gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                           │
│  Permissions:    Custom (read-only, on-request)                     │
│  Agents.md:      <none>                                             │
│  Pooled lease:   team-main / acct-1                                 │
│  Lease status:   Cooling down · Healthy                             │
│  Lease note:     Quota probe throttle active                        │
│  Next probe:     03:24                                              │
│                                                                     │
│  Token usage:    0 total  (0 input + 0 output)                      │
│  Limits:         data not available yet                             │
╰─────────────────────────────────────────────────────────────────────╯
