codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_switch_and_remote_reset_messages.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────╮
│  >_ mcodex (v0.125.0)                                                │
│                                                                      │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date        │
│ information on rate limits and credits                               │
│                                                                      │
│  Model:           gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                            │
│  Permissions:     Custom (read-only, on-request)                     │
│  Agents.md:       <none>                                             │
│  Pooled lease:    legacy-default / acct-2                            │
│  Lease status:    Cooling down · Busy                                │
│  Lease note:      Automatic selection in use                         │
│  Next eligible:   03:24 on 11 Apr                                    │
│  Remote reset:    gen 2 after turn turn-17                           │
│                                                                      │
│  Token usage:     0 total  (0 input + 0 output)                      │
│  Limits:          data not available yet                             │
╰──────────────────────────────────────────────────────────────────────╯
